parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ASSIGN
    ELSE
    ID
    IF
    LBRACE
    PRINT
    RBRACE
    SEMI
    WHILE

Grammar

Rule 0     S' -> expression
Rule 1     expression -> NUMBER
Rule 2     expression -> BOOLEAN
Rule 3     expression -> STRING
Rule 4     expression -> expression PLUS expression
Rule 5     expression -> expression MINUS expression
Rule 6     expression -> expression TIMES expression
Rule 7     expression -> expression DIVIDE expression
Rule 8     expression -> expression DIV expression
Rule 9     expression -> expression MOD expression
Rule 10    expression -> expression POWER expression
Rule 11    expression -> expression ANDALSO expression
Rule 12    expression -> expression ORELSE expression
Rule 13    expression -> expression LT expression
Rule 14    expression -> expression LE expression
Rule 15    expression -> expression EQ expression
Rule 16    expression -> expression NE expression
Rule 17    expression -> expression GE expression
Rule 18    expression -> expression GT expression
Rule 19    expression -> expression CONS expression
Rule 20    expression -> expression IN expression
Rule 21    expression -> LPAREN expression RPAREN
Rule 22    expression -> NOT expression
Rule 23    expression -> MINUS expression
Rule 24    expression -> PLUS expression
Rule 25    expression -> LBRACKET RBRACKET
Rule 26    expression -> LBRACKET l_items RBRACKET
Rule 27    l_items -> expression
Rule 28    l_items -> l_items COMMA expression
Rule 29    expression -> LPAREN expression COMMA RPAREN
Rule 30    expression -> LPAREN t_items RPAREN
Rule 31    t_items -> expression
Rule 32    t_items -> expression COMMA t_items
Rule 33    expression -> expression LBRACKET expression RBRACKET
Rule 34    expression -> HASH NUMBER LPAREN t_items RPAREN
Rule 35    expression -> HASH NUMBER LPAREN expression COMMA RPAREN

Terminals, with rules where they appear

ANDALSO              : 11
ASSIGN               : 
BOOLEAN              : 2
COMMA                : 28 29 32 35
CONS                 : 19
DIV                  : 8
DIVIDE               : 7
ELSE                 : 
EQ                   : 15
GE                   : 17
GT                   : 18
HASH                 : 34 35
ID                   : 
IF                   : 
IN                   : 20
LBRACE               : 
LBRACKET             : 25 26 33
LE                   : 14
LPAREN               : 21 29 30 34 35
LT                   : 13
MINUS                : 5 23
MOD                  : 9
NE                   : 16
NOT                  : 22
NUMBER               : 1 34 35
ORELSE               : 12
PLUS                 : 4 24
POWER                : 10
PRINT                : 
RBRACE               : 
RBRACKET             : 25 26 33
RPAREN               : 21 29 30 34 35
SEMI                 : 
STRING               : 3
TIMES                : 6
WHILE                : 
error                : 

Nonterminals, with rules where they appear

expression           : 4 4 5 5 6 6 7 7 8 8 9 9 10 10 11 11 12 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 22 23 24 27 28 29 31 32 33 33 35 0
l_items              : 26 28
t_items              : 30 32 34

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . NUMBER
    (2) expression -> . BOOLEAN
    (3) expression -> . STRING
    (4) expression -> . expression PLUS expression
    (5) expression -> . expression MINUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . expression DIV expression
    (9) expression -> . expression MOD expression
    (10) expression -> . expression POWER expression
    (11) expression -> . expression ANDALSO expression
    (12) expression -> . expression ORELSE expression
    (13) expression -> . expression LT expression
    (14) expression -> . expression LE expression
    (15) expression -> . expression EQ expression
    (16) expression -> . expression NE expression
    (17) expression -> . expression GE expression
    (18) expression -> . expression GT expression
    (19) expression -> . expression CONS expression
    (20) expression -> . expression IN expression
    (21) expression -> . LPAREN expression RPAREN
    (22) expression -> . NOT expression
    (23) expression -> . MINUS expression
    (24) expression -> . PLUS expression
    (25) expression -> . LBRACKET RBRACKET
    (26) expression -> . LBRACKET l_items RBRACKET
    (29) expression -> . LPAREN expression COMMA RPAREN
    (30) expression -> . LPAREN t_items RPAREN
    (33) expression -> . expression LBRACKET expression RBRACKET
    (34) expression -> . HASH NUMBER LPAREN t_items RPAREN
    (35) expression -> . HASH NUMBER LPAREN expression COMMA RPAREN

    NUMBER          shift and go to state 2
    BOOLEAN         shift and go to state 3
    STRING          shift and go to state 4
    LPAREN          shift and go to state 7
    NOT             shift and go to state 8
    MINUS           shift and go to state 6
    PLUS            shift and go to state 5
    LBRACKET        shift and go to state 9
    HASH            shift and go to state 10

    expression                     shift and go to state 1

state 1

    (0) S' -> expression .
    (4) expression -> expression . PLUS expression
    (5) expression -> expression . MINUS expression
    (6) expression -> expression . TIMES expression
    (7) expression -> expression . DIVIDE expression
    (8) expression -> expression . DIV expression
    (9) expression -> expression . MOD expression
    (10) expression -> expression . POWER expression
    (11) expression -> expression . ANDALSO expression
    (12) expression -> expression . ORELSE expression
    (13) expression -> expression . LT expression
    (14) expression -> expression . LE expression
    (15) expression -> expression . EQ expression
    (16) expression -> expression . NE expression
    (17) expression -> expression . GE expression
    (18) expression -> expression . GT expression
    (19) expression -> expression . CONS expression
    (20) expression -> expression . IN expression
    (33) expression -> expression . LBRACKET expression RBRACKET

    PLUS            shift and go to state 11
    MINUS           shift and go to state 12
    TIMES           shift and go to state 13
    DIVIDE          shift and go to state 14
    DIV             shift and go to state 15
    MOD             shift and go to state 16
    POWER           shift and go to state 17
    ANDALSO         shift and go to state 18
    ORELSE          shift and go to state 19
    LT              shift and go to state 20
    LE              shift and go to state 21
    EQ              shift and go to state 22
    NE              shift and go to state 23
    GE              shift and go to state 24
    GT              shift and go to state 25
    CONS            shift and go to state 26
    IN              shift and go to state 27
    LBRACKET        shift and go to state 28


state 2

    (1) expression -> NUMBER .

    PLUS            reduce using rule 1 (expression -> NUMBER .)
    MINUS           reduce using rule 1 (expression -> NUMBER .)
    TIMES           reduce using rule 1 (expression -> NUMBER .)
    DIVIDE          reduce using rule 1 (expression -> NUMBER .)
    DIV             reduce using rule 1 (expression -> NUMBER .)
    MOD             reduce using rule 1 (expression -> NUMBER .)
    POWER           reduce using rule 1 (expression -> NUMBER .)
    ANDALSO         reduce using rule 1 (expression -> NUMBER .)
    ORELSE          reduce using rule 1 (expression -> NUMBER .)
    LT              reduce using rule 1 (expression -> NUMBER .)
    LE              reduce using rule 1 (expression -> NUMBER .)
    EQ              reduce using rule 1 (expression -> NUMBER .)
    NE              reduce using rule 1 (expression -> NUMBER .)
    GE              reduce using rule 1 (expression -> NUMBER .)
    GT              reduce using rule 1 (expression -> NUMBER .)
    CONS            reduce using rule 1 (expression -> NUMBER .)
    IN              reduce using rule 1 (expression -> NUMBER .)
    LBRACKET        reduce using rule 1 (expression -> NUMBER .)
    $end            reduce using rule 1 (expression -> NUMBER .)
    RPAREN          reduce using rule 1 (expression -> NUMBER .)
    COMMA           reduce using rule 1 (expression -> NUMBER .)
    RBRACKET        reduce using rule 1 (expression -> NUMBER .)


state 3

    (2) expression -> BOOLEAN .

    PLUS            reduce using rule 2 (expression -> BOOLEAN .)
    MINUS           reduce using rule 2 (expression -> BOOLEAN .)
    TIMES           reduce using rule 2 (expression -> BOOLEAN .)
    DIVIDE          reduce using rule 2 (expression -> BOOLEAN .)
    DIV             reduce using rule 2 (expression -> BOOLEAN .)
    MOD             reduce using rule 2 (expression -> BOOLEAN .)
    POWER           reduce using rule 2 (expression -> BOOLEAN .)
    ANDALSO         reduce using rule 2 (expression -> BOOLEAN .)
    ORELSE          reduce using rule 2 (expression -> BOOLEAN .)
    LT              reduce using rule 2 (expression -> BOOLEAN .)
    LE              reduce using rule 2 (expression -> BOOLEAN .)
    EQ              reduce using rule 2 (expression -> BOOLEAN .)
    NE              reduce using rule 2 (expression -> BOOLEAN .)
    GE              reduce using rule 2 (expression -> BOOLEAN .)
    GT              reduce using rule 2 (expression -> BOOLEAN .)
    CONS            reduce using rule 2 (expression -> BOOLEAN .)
    IN              reduce using rule 2 (expression -> BOOLEAN .)
    LBRACKET        reduce using rule 2 (expression -> BOOLEAN .)
    $end            reduce using rule 2 (expression -> BOOLEAN .)
    RPAREN          reduce using rule 2 (expression -> BOOLEAN .)
    COMMA           reduce using rule 2 (expression -> BOOLEAN .)
    RBRACKET        reduce using rule 2 (expression -> BOOLEAN .)


state 4

    (3) expression -> STRING .

    PLUS            reduce using rule 3 (expression -> STRING .)
    MINUS           reduce using rule 3 (expression -> STRING .)
    TIMES           reduce using rule 3 (expression -> STRING .)
    DIVIDE          reduce using rule 3 (expression -> STRING .)
    DIV             reduce using rule 3 (expression -> STRING .)
    MOD             reduce using rule 3 (expression -> STRING .)
    POWER           reduce using rule 3 (expression -> STRING .)
    ANDALSO         reduce using rule 3 (expression -> STRING .)
    ORELSE          reduce using rule 3 (expression -> STRING .)
    LT              reduce using rule 3 (expression -> STRING .)
    LE              reduce using rule 3 (expression -> STRING .)
    EQ              reduce using rule 3 (expression -> STRING .)
    NE              reduce using rule 3 (expression -> STRING .)
    GE              reduce using rule 3 (expression -> STRING .)
    GT              reduce using rule 3 (expression -> STRING .)
    CONS            reduce using rule 3 (expression -> STRING .)
    IN              reduce using rule 3 (expression -> STRING .)
    LBRACKET        reduce using rule 3 (expression -> STRING .)
    $end            reduce using rule 3 (expression -> STRING .)
    RPAREN          reduce using rule 3 (expression -> STRING .)
    COMMA           reduce using rule 3 (expression -> STRING .)
    RBRACKET        reduce using rule 3 (expression -> STRING .)


state 5

    (24) expression -> PLUS . expression
    (1) expression -> . NUMBER
    (2) expression -> . BOOLEAN
    (3) expression -> . STRING
    (4) expression -> . expression PLUS expression
    (5) expression -> . expression MINUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . expression DIV expression
    (9) expression -> . expression MOD expression
    (10) expression -> . expression POWER expression
    (11) expression -> . expression ANDALSO expression
    (12) expression -> . expression ORELSE expression
    (13) expression -> . expression LT expression
    (14) expression -> . expression LE expression
    (15) expression -> . expression EQ expression
    (16) expression -> . expression NE expression
    (17) expression -> . expression GE expression
    (18) expression -> . expression GT expression
    (19) expression -> . expression CONS expression
    (20) expression -> . expression IN expression
    (21) expression -> . LPAREN expression RPAREN
    (22) expression -> . NOT expression
    (23) expression -> . MINUS expression
    (24) expression -> . PLUS expression
    (25) expression -> . LBRACKET RBRACKET
    (26) expression -> . LBRACKET l_items RBRACKET
    (29) expression -> . LPAREN expression COMMA RPAREN
    (30) expression -> . LPAREN t_items RPAREN
    (33) expression -> . expression LBRACKET expression RBRACKET
    (34) expression -> . HASH NUMBER LPAREN t_items RPAREN
    (35) expression -> . HASH NUMBER LPAREN expression COMMA RPAREN

    NUMBER          shift and go to state 2
    BOOLEAN         shift and go to state 3
    STRING          shift and go to state 4
    LPAREN          shift and go to state 7
    NOT             shift and go to state 8
    MINUS           shift and go to state 6
    PLUS            shift and go to state 5
    LBRACKET        shift and go to state 9
    HASH            shift and go to state 10

    expression                     shift and go to state 29

state 6

    (23) expression -> MINUS . expression
    (1) expression -> . NUMBER
    (2) expression -> . BOOLEAN
    (3) expression -> . STRING
    (4) expression -> . expression PLUS expression
    (5) expression -> . expression MINUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . expression DIV expression
    (9) expression -> . expression MOD expression
    (10) expression -> . expression POWER expression
    (11) expression -> . expression ANDALSO expression
    (12) expression -> . expression ORELSE expression
    (13) expression -> . expression LT expression
    (14) expression -> . expression LE expression
    (15) expression -> . expression EQ expression
    (16) expression -> . expression NE expression
    (17) expression -> . expression GE expression
    (18) expression -> . expression GT expression
    (19) expression -> . expression CONS expression
    (20) expression -> . expression IN expression
    (21) expression -> . LPAREN expression RPAREN
    (22) expression -> . NOT expression
    (23) expression -> . MINUS expression
    (24) expression -> . PLUS expression
    (25) expression -> . LBRACKET RBRACKET
    (26) expression -> . LBRACKET l_items RBRACKET
    (29) expression -> . LPAREN expression COMMA RPAREN
    (30) expression -> . LPAREN t_items RPAREN
    (33) expression -> . expression LBRACKET expression RBRACKET
    (34) expression -> . HASH NUMBER LPAREN t_items RPAREN
    (35) expression -> . HASH NUMBER LPAREN expression COMMA RPAREN

    NUMBER          shift and go to state 2
    BOOLEAN         shift and go to state 3
    STRING          shift and go to state 4
    LPAREN          shift and go to state 7
    NOT             shift and go to state 8
    MINUS           shift and go to state 6
    PLUS            shift and go to state 5
    LBRACKET        shift and go to state 9
    HASH            shift and go to state 10

    expression                     shift and go to state 30

state 7

    (21) expression -> LPAREN . expression RPAREN
    (29) expression -> LPAREN . expression COMMA RPAREN
    (30) expression -> LPAREN . t_items RPAREN
    (1) expression -> . NUMBER
    (2) expression -> . BOOLEAN
    (3) expression -> . STRING
    (4) expression -> . expression PLUS expression
    (5) expression -> . expression MINUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . expression DIV expression
    (9) expression -> . expression MOD expression
    (10) expression -> . expression POWER expression
    (11) expression -> . expression ANDALSO expression
    (12) expression -> . expression ORELSE expression
    (13) expression -> . expression LT expression
    (14) expression -> . expression LE expression
    (15) expression -> . expression EQ expression
    (16) expression -> . expression NE expression
    (17) expression -> . expression GE expression
    (18) expression -> . expression GT expression
    (19) expression -> . expression CONS expression
    (20) expression -> . expression IN expression
    (21) expression -> . LPAREN expression RPAREN
    (22) expression -> . NOT expression
    (23) expression -> . MINUS expression
    (24) expression -> . PLUS expression
    (25) expression -> . LBRACKET RBRACKET
    (26) expression -> . LBRACKET l_items RBRACKET
    (29) expression -> . LPAREN expression COMMA RPAREN
    (30) expression -> . LPAREN t_items RPAREN
    (33) expression -> . expression LBRACKET expression RBRACKET
    (34) expression -> . HASH NUMBER LPAREN t_items RPAREN
    (35) expression -> . HASH NUMBER LPAREN expression COMMA RPAREN
    (31) t_items -> . expression
    (32) t_items -> . expression COMMA t_items

    NUMBER          shift and go to state 2
    BOOLEAN         shift and go to state 3
    STRING          shift and go to state 4
    LPAREN          shift and go to state 7
    NOT             shift and go to state 8
    MINUS           shift and go to state 6
    PLUS            shift and go to state 5
    LBRACKET        shift and go to state 9
    HASH            shift and go to state 10

    expression                     shift and go to state 31
    t_items                        shift and go to state 32

state 8

    (22) expression -> NOT . expression
    (1) expression -> . NUMBER
    (2) expression -> . BOOLEAN
    (3) expression -> . STRING
    (4) expression -> . expression PLUS expression
    (5) expression -> . expression MINUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . expression DIV expression
    (9) expression -> . expression MOD expression
    (10) expression -> . expression POWER expression
    (11) expression -> . expression ANDALSO expression
    (12) expression -> . expression ORELSE expression
    (13) expression -> . expression LT expression
    (14) expression -> . expression LE expression
    (15) expression -> . expression EQ expression
    (16) expression -> . expression NE expression
    (17) expression -> . expression GE expression
    (18) expression -> . expression GT expression
    (19) expression -> . expression CONS expression
    (20) expression -> . expression IN expression
    (21) expression -> . LPAREN expression RPAREN
    (22) expression -> . NOT expression
    (23) expression -> . MINUS expression
    (24) expression -> . PLUS expression
    (25) expression -> . LBRACKET RBRACKET
    (26) expression -> . LBRACKET l_items RBRACKET
    (29) expression -> . LPAREN expression COMMA RPAREN
    (30) expression -> . LPAREN t_items RPAREN
    (33) expression -> . expression LBRACKET expression RBRACKET
    (34) expression -> . HASH NUMBER LPAREN t_items RPAREN
    (35) expression -> . HASH NUMBER LPAREN expression COMMA RPAREN

    NUMBER          shift and go to state 2
    BOOLEAN         shift and go to state 3
    STRING          shift and go to state 4
    LPAREN          shift and go to state 7
    NOT             shift and go to state 8
    MINUS           shift and go to state 6
    PLUS            shift and go to state 5
    LBRACKET        shift and go to state 9
    HASH            shift and go to state 10

    expression                     shift and go to state 33

state 9

    (25) expression -> LBRACKET . RBRACKET
    (26) expression -> LBRACKET . l_items RBRACKET
    (27) l_items -> . expression
    (28) l_items -> . l_items COMMA expression
    (1) expression -> . NUMBER
    (2) expression -> . BOOLEAN
    (3) expression -> . STRING
    (4) expression -> . expression PLUS expression
    (5) expression -> . expression MINUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . expression DIV expression
    (9) expression -> . expression MOD expression
    (10) expression -> . expression POWER expression
    (11) expression -> . expression ANDALSO expression
    (12) expression -> . expression ORELSE expression
    (13) expression -> . expression LT expression
    (14) expression -> . expression LE expression
    (15) expression -> . expression EQ expression
    (16) expression -> . expression NE expression
    (17) expression -> . expression GE expression
    (18) expression -> . expression GT expression
    (19) expression -> . expression CONS expression
    (20) expression -> . expression IN expression
    (21) expression -> . LPAREN expression RPAREN
    (22) expression -> . NOT expression
    (23) expression -> . MINUS expression
    (24) expression -> . PLUS expression
    (25) expression -> . LBRACKET RBRACKET
    (26) expression -> . LBRACKET l_items RBRACKET
    (29) expression -> . LPAREN expression COMMA RPAREN
    (30) expression -> . LPAREN t_items RPAREN
    (33) expression -> . expression LBRACKET expression RBRACKET
    (34) expression -> . HASH NUMBER LPAREN t_items RPAREN
    (35) expression -> . HASH NUMBER LPAREN expression COMMA RPAREN

    RBRACKET        shift and go to state 34
    NUMBER          shift and go to state 2
    BOOLEAN         shift and go to state 3
    STRING          shift and go to state 4
    LPAREN          shift and go to state 7
    NOT             shift and go to state 8
    MINUS           shift and go to state 6
    PLUS            shift and go to state 5
    LBRACKET        shift and go to state 9
    HASH            shift and go to state 10

    l_items                        shift and go to state 35
    expression                     shift and go to state 36

state 10

    (34) expression -> HASH . NUMBER LPAREN t_items RPAREN
    (35) expression -> HASH . NUMBER LPAREN expression COMMA RPAREN

    NUMBER          shift and go to state 37


state 11

    (4) expression -> expression PLUS . expression
    (1) expression -> . NUMBER
    (2) expression -> . BOOLEAN
    (3) expression -> . STRING
    (4) expression -> . expression PLUS expression
    (5) expression -> . expression MINUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . expression DIV expression
    (9) expression -> . expression MOD expression
    (10) expression -> . expression POWER expression
    (11) expression -> . expression ANDALSO expression
    (12) expression -> . expression ORELSE expression
    (13) expression -> . expression LT expression
    (14) expression -> . expression LE expression
    (15) expression -> . expression EQ expression
    (16) expression -> . expression NE expression
    (17) expression -> . expression GE expression
    (18) expression -> . expression GT expression
    (19) expression -> . expression CONS expression
    (20) expression -> . expression IN expression
    (21) expression -> . LPAREN expression RPAREN
    (22) expression -> . NOT expression
    (23) expression -> . MINUS expression
    (24) expression -> . PLUS expression
    (25) expression -> . LBRACKET RBRACKET
    (26) expression -> . LBRACKET l_items RBRACKET
    (29) expression -> . LPAREN expression COMMA RPAREN
    (30) expression -> . LPAREN t_items RPAREN
    (33) expression -> . expression LBRACKET expression RBRACKET
    (34) expression -> . HASH NUMBER LPAREN t_items RPAREN
    (35) expression -> . HASH NUMBER LPAREN expression COMMA RPAREN

    NUMBER          shift and go to state 2
    BOOLEAN         shift and go to state 3
    STRING          shift and go to state 4
    LPAREN          shift and go to state 7
    NOT             shift and go to state 8
    MINUS           shift and go to state 6
    PLUS            shift and go to state 5
    LBRACKET        shift and go to state 9
    HASH            shift and go to state 10

    expression                     shift and go to state 38

state 12

    (5) expression -> expression MINUS . expression
    (1) expression -> . NUMBER
    (2) expression -> . BOOLEAN
    (3) expression -> . STRING
    (4) expression -> . expression PLUS expression
    (5) expression -> . expression MINUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . expression DIV expression
    (9) expression -> . expression MOD expression
    (10) expression -> . expression POWER expression
    (11) expression -> . expression ANDALSO expression
    (12) expression -> . expression ORELSE expression
    (13) expression -> . expression LT expression
    (14) expression -> . expression LE expression
    (15) expression -> . expression EQ expression
    (16) expression -> . expression NE expression
    (17) expression -> . expression GE expression
    (18) expression -> . expression GT expression
    (19) expression -> . expression CONS expression
    (20) expression -> . expression IN expression
    (21) expression -> . LPAREN expression RPAREN
    (22) expression -> . NOT expression
    (23) expression -> . MINUS expression
    (24) expression -> . PLUS expression
    (25) expression -> . LBRACKET RBRACKET
    (26) expression -> . LBRACKET l_items RBRACKET
    (29) expression -> . LPAREN expression COMMA RPAREN
    (30) expression -> . LPAREN t_items RPAREN
    (33) expression -> . expression LBRACKET expression RBRACKET
    (34) expression -> . HASH NUMBER LPAREN t_items RPAREN
    (35) expression -> . HASH NUMBER LPAREN expression COMMA RPAREN

    NUMBER          shift and go to state 2
    BOOLEAN         shift and go to state 3
    STRING          shift and go to state 4
    LPAREN          shift and go to state 7
    NOT             shift and go to state 8
    MINUS           shift and go to state 6
    PLUS            shift and go to state 5
    LBRACKET        shift and go to state 9
    HASH            shift and go to state 10

    expression                     shift and go to state 39

state 13

    (6) expression -> expression TIMES . expression
    (1) expression -> . NUMBER
    (2) expression -> . BOOLEAN
    (3) expression -> . STRING
    (4) expression -> . expression PLUS expression
    (5) expression -> . expression MINUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . expression DIV expression
    (9) expression -> . expression MOD expression
    (10) expression -> . expression POWER expression
    (11) expression -> . expression ANDALSO expression
    (12) expression -> . expression ORELSE expression
    (13) expression -> . expression LT expression
    (14) expression -> . expression LE expression
    (15) expression -> . expression EQ expression
    (16) expression -> . expression NE expression
    (17) expression -> . expression GE expression
    (18) expression -> . expression GT expression
    (19) expression -> . expression CONS expression
    (20) expression -> . expression IN expression
    (21) expression -> . LPAREN expression RPAREN
    (22) expression -> . NOT expression
    (23) expression -> . MINUS expression
    (24) expression -> . PLUS expression
    (25) expression -> . LBRACKET RBRACKET
    (26) expression -> . LBRACKET l_items RBRACKET
    (29) expression -> . LPAREN expression COMMA RPAREN
    (30) expression -> . LPAREN t_items RPAREN
    (33) expression -> . expression LBRACKET expression RBRACKET
    (34) expression -> . HASH NUMBER LPAREN t_items RPAREN
    (35) expression -> . HASH NUMBER LPAREN expression COMMA RPAREN

    NUMBER          shift and go to state 2
    BOOLEAN         shift and go to state 3
    STRING          shift and go to state 4
    LPAREN          shift and go to state 7
    NOT             shift and go to state 8
    MINUS           shift and go to state 6
    PLUS            shift and go to state 5
    LBRACKET        shift and go to state 9
    HASH            shift and go to state 10

    expression                     shift and go to state 40

state 14

    (7) expression -> expression DIVIDE . expression
    (1) expression -> . NUMBER
    (2) expression -> . BOOLEAN
    (3) expression -> . STRING
    (4) expression -> . expression PLUS expression
    (5) expression -> . expression MINUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . expression DIV expression
    (9) expression -> . expression MOD expression
    (10) expression -> . expression POWER expression
    (11) expression -> . expression ANDALSO expression
    (12) expression -> . expression ORELSE expression
    (13) expression -> . expression LT expression
    (14) expression -> . expression LE expression
    (15) expression -> . expression EQ expression
    (16) expression -> . expression NE expression
    (17) expression -> . expression GE expression
    (18) expression -> . expression GT expression
    (19) expression -> . expression CONS expression
    (20) expression -> . expression IN expression
    (21) expression -> . LPAREN expression RPAREN
    (22) expression -> . NOT expression
    (23) expression -> . MINUS expression
    (24) expression -> . PLUS expression
    (25) expression -> . LBRACKET RBRACKET
    (26) expression -> . LBRACKET l_items RBRACKET
    (29) expression -> . LPAREN expression COMMA RPAREN
    (30) expression -> . LPAREN t_items RPAREN
    (33) expression -> . expression LBRACKET expression RBRACKET
    (34) expression -> . HASH NUMBER LPAREN t_items RPAREN
    (35) expression -> . HASH NUMBER LPAREN expression COMMA RPAREN

    NUMBER          shift and go to state 2
    BOOLEAN         shift and go to state 3
    STRING          shift and go to state 4
    LPAREN          shift and go to state 7
    NOT             shift and go to state 8
    MINUS           shift and go to state 6
    PLUS            shift and go to state 5
    LBRACKET        shift and go to state 9
    HASH            shift and go to state 10

    expression                     shift and go to state 41

state 15

    (8) expression -> expression DIV . expression
    (1) expression -> . NUMBER
    (2) expression -> . BOOLEAN
    (3) expression -> . STRING
    (4) expression -> . expression PLUS expression
    (5) expression -> . expression MINUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . expression DIV expression
    (9) expression -> . expression MOD expression
    (10) expression -> . expression POWER expression
    (11) expression -> . expression ANDALSO expression
    (12) expression -> . expression ORELSE expression
    (13) expression -> . expression LT expression
    (14) expression -> . expression LE expression
    (15) expression -> . expression EQ expression
    (16) expression -> . expression NE expression
    (17) expression -> . expression GE expression
    (18) expression -> . expression GT expression
    (19) expression -> . expression CONS expression
    (20) expression -> . expression IN expression
    (21) expression -> . LPAREN expression RPAREN
    (22) expression -> . NOT expression
    (23) expression -> . MINUS expression
    (24) expression -> . PLUS expression
    (25) expression -> . LBRACKET RBRACKET
    (26) expression -> . LBRACKET l_items RBRACKET
    (29) expression -> . LPAREN expression COMMA RPAREN
    (30) expression -> . LPAREN t_items RPAREN
    (33) expression -> . expression LBRACKET expression RBRACKET
    (34) expression -> . HASH NUMBER LPAREN t_items RPAREN
    (35) expression -> . HASH NUMBER LPAREN expression COMMA RPAREN
